--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,6 +39,13 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+      - file: "src/pages/bylaws/index.md"
+        label: "Bylaws"
+        name: "bylaws"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "bylaws-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
