--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,6 +32,7 @@ collections:
           - {label: Subheading, name: subheading, widget: string}
           - {label: Mission, name: mission, widget: object, fields: [{label: Title, name: title, widget: string}, {label: Statement, name: statement, widget: text}]}
           - {label: Medical Conditions, name: medicalConditions, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Diseases, name: diseases, widget: list, fields: [{label: Name, name: name, widget: string}]}]}
+          - {label: Projects Heading, name: projects, widget: string}
       - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
