--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -47,6 +47,14 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "bylaws-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+      - file: "src/pages/education/index.md"
+        label: "Education"
+        name: "education"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "education-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Intro", name: "intro", widget: "object", fields: [{label: "Heading", name: "heading", widget: "string"}, {label: "Content", name: "text", widget: "text"}]}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/volunteer/index.md"
         label: "Volunteer Page"
         name: "volunteer"
